[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/MusicController.gd" type="Script" id=1]
[ext_resource path="res://Audio/ButtonSoundEffect.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/BackgroundMusic.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/MenuMusic.mp3" type="AudioStream" id=4]
[ext_resource path="res://Audio/DeathSoundEffect.mp3" type="AudioStream" id=5]

[node name="MusicController" type="Node2D"]
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 4.742
mix_target = 1

[node name="GameBackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
